Added custom text and images

--- a/index.html
+++ b/index.html
@@ -6,13 +6,15 @@
 -->
 <html>
 	<head>
-		<title>About Kevin Chen</title>
+		<title>Newman Catholic Ministry</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="assets/css/bootstrap.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 		<link rel='icon' href='favicon.ico' type='image/x-icon'/>
 	</head>
+
 	<body class="is-preload">
 
 		<!-- Wrapper -->
@@ -21,10 +23,10 @@
 				<!-- Main -->
 					<section id="main">
 						<header>
-							<span class="avatar"><img src="images/avatar.jpg" alt="" style="width:200px" /></span>
-							<h1>Kevin Chen</h1>
-							<p>Software Engineering Student</p>
-							<p id="bio-text">Hi, my name is Kevin! I'm a junior software engineering major at UT Dallas.</p>
+							<span class="avatar"><img src="images/avatar.jpg" alt="" style="width:200px"/></span>
+							<h1>Newman Catholic Ministry</h1>
+							<p id="bio-text">As Catholics at the University of Texas at Dallas, we seek to build up the Catholic community, 
+								reach out to Catholics on campus and be the presence of Christ to those around us.</p>
 						</header>
 						<!--
 						<hr />
@@ -65,9 +67,8 @@
 						-->
 						<footer>
 							<ul class="icons">
-								<li><a href="https://twitter.com/nich227" class="fa-twitter">Twitter</a></li>
-								<li><a href="https://instagram.com/nich227" class="fa-instagram">Instagram</a></li>
-								<li><a href="https://facebook.com/ning.k.chen" class="fa-facebook">Facebook</a></li>
+								<li><a href="https://ncm-utd.slack.com" class="fa-slack">Slack</a></li>
+								<li><a href="https://instagram.com/ncm_utd" class="fa-instagram">Instagram</a></li>
 							</ul>
 						</footer>
 					</section>
@@ -75,7 +76,7 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="copyright">
-							<li>&copy; Kevin Chen</li>
+							<li>&copy;Kevin Chen, Patrick Soisson, Dylan Kreth</li>
 						</ul>
 					</footer>
 
