Finalizing changes for Firebase

--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
 				<!-- Main -->
 					<section id="main">
 						<header>
-							<span class="avatar"><img src="images/avatar.jpg" alt="" style="width:200px"/></span>
+							<a href="http://soundbible.com/book/holy-bible-pdf-download.pdf"><span class="avatar"><img src="images/avatar.jpg" alt="" style="width:200px"/></span></a>
 							<h1>Newman Catholic Ministry</h1>
 							<p id="bio-text">As Catholics at the University of Texas at Dallas, we seek to build up the Catholic community, 
 								reach out to Catholics on campus and be the presence of Christ to those around us.</p>
