--- a/public/about.html
+++ b/public/about.html
@@ -1,1 +1,70 @@
-Hello world
+<!DOCTYPE HTML>
+<!--
+	Identity by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
+<html>
+	<head>
+		<title>Newman Catholic Ministry</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="assets/css/bootstrap.css" />
+		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<link rel='icon' href='favicon.ico' type='image/x-icon'/>
+	</head>
+
+	<body class="is-preload">
+
+			<nav class="navbar navbar-expand-lg navbar-light bg-light">
+					<div class="collapse navbar-collapse" id="navbarSupportedContent">
+					  <ul class="navbar-nav mr-auto">
+						<li class="nav-item">
+						  <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+						</li>
+						<li class="nav-item active">
+						  <a class="nav-link" href="#">About us</a>
+						</li>
+					</div>
+				  </nav>
+
+		<!-- Wrapper -->
+			<div id="wrapper">
+
+				<!-- Main -->
+					<section id="main">
+						<header>
+							<a href="http://soundbible.com/book/holy-bible-pdf-download.pdf"><span class="avatar"><img src="images/avatar.jpg" alt="" style="width:200px"/></span></a>
+							<h1>Newman Catholic Ministry</h1>
+							<p id="bio-text">Hello World</p>
+						</header>
+						
+						<footer>
+							<ul class="icons">
+								<li><a href="https://ncm-utd.slack.com" class="fa-slack">Slack</a></li>
+								<li><a href="https://instagram.com/ncm_utd" class="fa-instagram">Instagram</a></li>
+							</ul>
+						</footer>
+					</section>
+
+				<!-- Footer -->
+					<footer id="footer">
+						<ul class="copyright">
+							<li>Built by <a href="https://github.com/nich227/ncm-utd">the bois</a> in Newman Catholic Ministry</li>
+							
+						</ul>
+					</footer>
+
+			</div>
+
+		<!-- Scripts -->
+			<script>
+				if ('addEventListener' in window) {
+					window.addEventListener('load', function() { document.body.className = document.body.className.replace(/\bis-preload\b/, ''); });
+					document.body.className += (navigator.userAgent.match(/(MSIE|rv:11\.0)/) ? ' is-ie' : '');
+				}
+			</script>
+
+	</body>
+</html>
