--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,17 @@
 		<link rel='icon' href='favicon.ico' type='image/x-icon'/>
 	</head>
 
+	<nav class="navbar navbar-expand-lg navbar-light bg-light">
+			<ul class="navbar-nav mr-auto">
+			  <li class="nav-item active">
+				<a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
+			  </li>
+			  <li class="nav-item">
+				<a class="nav-link" href=about.html">About us</a>
+			  </li>
+			  </ul>
+		</nav>
+
 	<body class="is-preload">
 
 		<!-- Wrapper -->
@@ -28,43 +39,7 @@
 							<p id="bio-text">As Catholics at the University of Texas at Dallas, we seek to build up the Catholic community, 
 								reach out to Catholics on campus and be the presence of Christ to those around us.</p>
 						</header>
-						<!--
-						<hr />
-						<h2>Extra Stuff!</h2>
-						<form method="post" action="#">
-							<div class="fields">
-								<div class="field">
-									<input type="text" name="name" id="name" placeholder="Name" />
-								</div>
-								<div class="field">
-									<input type="email" name="email" id="email" placeholder="Email" />
-								</div>
-								<div class="field">
-									<select name="department" id="department">
-										<option value="">Department</option>
-										<option value="sales">Sales</option>
-										<option value="tech">Tech Support</option>
-										<option value="null">/dev/null</option>
-									</select>
-								</div>
-								<div class="field">
-									<textarea name="message" id="message" placeholder="Message" rows="4"></textarea>
-								</div>
-								<div class="field">
-									<input type="checkbox" id="human" name="human" /><label for="human">I'm a human</label>
-								</div>
-								<div class="field">
-									<label>But are you a robot?</label>
-									<input type="radio" id="robot_yes" name="robot" /><label for="robot_yes">Yes</label>
-									<input type="radio" id="robot_no" name="robot" /><label for="robot_no">No</label>
-								</div>
-							</div>
-							<ul class="actions special">
-								<li><a href="#" class="button">Get Started</a></li>
-							</ul>
-						</form>
-						<hr />
-						-->
+						
 						<footer>
 							<ul class="icons">
 								<li><a href="https://ncm-utd.slack.com" class="fa-slack">Slack</a></li>
@@ -75,9 +50,7 @@
 
 				<!-- Footer -->
 					<footer id="footer">
-						<ul class="copyright">
-							<li>&copy;Kevin Chen, Patrick Soisson, Dylan Kreth</li>
-						</ul>
+						Built by <a href="https://github.com/nich227/ncm-utd">the bois</a> in Newman Catholic Ministry</li>
 					</footer>
 
 			</div>
