--- a/public/index.html
+++ b/public/index.html
@@ -18,11 +18,14 @@
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
 			<ul class="navbar-nav mr-auto">
 			  <li class="nav-item active">
-				<a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
+				<a class="nav-link" href="#main">Home<span class="sr-only">(current)</span></a>
 			  </li>
 			  <li class="nav-item">
-				<a class="nav-link" href=about.html">About us</a>
+				<a class="nav-link" href="#about">About us</a>
 			  </li>
+                <li class ="nav-item">
+                    <a class = "nav-link" href="#Rides-to-Mass">Rides to Mass</a>
+                </li>
 			  </ul>
 		</nav>
 
@@ -47,6 +50,10 @@
 							</ul>
 						</footer>
 					</section>
+                
+                <section id="about">
+                    <h1>About Us!</h1>
+                </section>
 
 				<!-- Footer -->
 					<footer id="footer">
