--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
 				<a class="nav-link" href="#main">Home<span class="sr-only">(current)</span></a>
 			  </li>
 			  <li class="nav-item">
-				<a class="nav-link" href="#about">About us</a>
+				<a class="nav-link" href="about.html">About us</a>
 			  </li>
                 <li class ="nav-item">
                     <a class = "nav-link" href="#Rides-to-Mass">Rides to Mass</a>
