--- a/public/about.html
+++ b/public/about.html
@@ -21,10 +21,10 @@
 					<div class="collapse navbar-collapse" id="navbarSupportedContent">
 					  <ul class="navbar-nav mr-auto">
 						<li class="nav-item">
-						  <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+						  <a class="nav-link" href="index.html">Home </a>
 						</li>
 						<li class="nav-item active">
-						  <a class="nav-link" href="#">About us</a>
+						  <a class="nav-link" href="#">About us<span class="sr-only">(current)</span></a>
 						</li>
 					</div>
 				  </nav>
@@ -35,9 +35,24 @@
 				<!-- Main -->
 					<section id="main">
 						<header>
-							<a href="http://soundbible.com/book/holy-bible-pdf-download.pdf"><span class="avatar"><img src="images/avatar.jpg" alt="" style="width:200px"/></span></a>
-							<h1>Newman Catholic Ministry</h1>
-							<p id="bio-text">Hello World</p>
+							<span class="avatar"><img src="images/avatar.jpg" alt="" style="width:200px"/></span>
+							<h1>About Us</h1>
+                            <h2>Heads</h2>
+                                <p id="bio-text">Dylan Kreth - President</p>
+                                <p id="bio-text">Amanda Lindayag - Vice President</p>
+                                <p id="bio-text">Leo Dobson - Prayer Head</p>
+                                <p id="bio-text">Chris Citalan - Media Head</p>
+                                <p id="bio-text">Kaitlin Colby - Service Head</p>
+                                <p id="bio-text">Daniel Sandlin - Outreach Head</p>
+                                <p id="bio-text">Chijindu Iheanacho - Social Head</p>
+
+                            <h2>Chairs</h2>
+							<p id="bio-text">Josh Guzman - Transportation Chair</p>
+                            <p id="bio-text">Julia Knodell- Book Club Chair </p>
+                            <p id="bio-text">Patrick Soisson - Sports Chair</p>
+                            <p id="bio-text">Lydia Berger - Music Ministry Chair</p>
+                            <p id="bio-text">Montgomery Flores - Men's Small Group Chair</p>
+                            <p id="bio-text">Emily Brown - Women's Small Group Chair</p>
 						</header>
 						
 						<footer>
