--- a/public/about.html
+++ b/public/about.html
@@ -38,7 +38,7 @@
 							<span class="avatar"><img src="images/avatar.jpg" alt="" style="width:200px"/></span>
 							<h1>About Us</h1>
                             <h2>Heads</h2>
-                                <p id="bio-text">Dylan Kreth - President</p>
+                                <p id="bio-text">Dylan Kreth - Mr. President</p>
                                 <p id="bio-text">Amanda Lindayag - Vice President</p>
                                 <p id="bio-text">Leo Dobson - Prayer Head</p>
                                 <p id="bio-text">Chris Citalan - Media Head</p>
