--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,7 @@
 
 				<!-- Footer -->
 					<footer id="footer">
-						Built by <a href="https://github.com/nich227/ncm-utd">the bois</a> in Newman Catholic Ministry</li>
+						Built by <a href="https://github.com/nich227/ncm-utd">the bois</a> in Newman Catholic Ministry
 					</footer>
 
 			</div>
