--- a/public/about.html
+++ b/public/about.html
@@ -15,19 +15,18 @@
 		<link rel='icon' href='favicon.ico' type='image/x-icon'/>
 	</head>
 
-	<body class="is-preload">
+	<nav class="navbar navbar-expand-lg navbar-light bg-light">
+			<ul class="navbar-nav mr-auto">
+			  <li class="nav-item active">
+				<a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
+			  </li>
+			  <li class="nav-item">
+				<a class="nav-link" href=about.html">About us</a>
+			  </li>
+			  </ul>
+		</nav>
 
-			<nav class="navbar navbar-expand-lg navbar-light bg-light">
-					<div class="collapse navbar-collapse" id="navbarSupportedContent">
-					  <ul class="navbar-nav mr-auto">
-						<li class="nav-item">
-						  <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
-						</li>
-						<li class="nav-item active">
-						  <a class="nav-link" href="#">About us</a>
-						</li>
-					</div>
-				  </nav>
+	<body class="is-preload">
 
 		<!-- Wrapper -->
 			<div id="wrapper">
@@ -50,10 +49,7 @@
 
 				<!-- Footer -->
 					<footer id="footer">
-						<ul class="copyright">
-							<li>Built by <a href="https://github.com/nich227/ncm-utd">the bois</a> in Newman Catholic Ministry</li>
-							
-						</ul>
+						Built by <a href="https://github.com/nich227/ncm-utd">the bois</a> in Newman Catholic Ministry
 					</footer>
 
 			</div>
