remove About us header from home page

--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,4 @@
 <!DOCTYPE HTML>
-<!--
-	Identity by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
 		<title>Newman Catholic Ministry</title>
@@ -51,13 +46,9 @@
 						</footer>
 					</section>
                 
-                <section id="about">
-                    <h1>About Us!</h1>
-                </section>
-
 				<!-- Footer -->
 					<footer id="footer">
-						Built by <a href="https://github.com/nich227/ncm-utd">the bois</a> in Newman Catholic Ministry</li>
+						Built by <a href="https://github.com/nich227/ncm-utd">the bois</a> in Newman Catholic Ministry
 					</footer>
 
 			</div>
