--- a/public/about.html
+++ b/public/about.html
@@ -21,7 +21,7 @@
 				<a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
 			  </li>
 			  <li class="nav-item">
-				<a class="nav-link" href=about.html">About us</a>
+				<a class="nav-link" href="about.html">About us</a>
 			  </li>
 			  </ul>
 		</nav>
@@ -34,11 +34,6 @@
 				<!-- Main -->
 					<section id="main">
 						<header>
-<<<<<<< HEAD
-							<a href="http://soundbible.com/book/holy-bible-pdf-download.pdf"><span class="avatar"><img src="images/avatar.jpg" alt="" style="width:200px"/></span></a>
-							<h1>Newman Catholic Ministry</h1>
-							<p id="bio-text">Hello World</p>
-=======
 							<span class="avatar"><img src="images/avatar.jpg" alt="" style="width:200px"/></span>
 							<h1>About Us</h1>
                             <h2>Heads</h2>
@@ -57,7 +52,6 @@
                             <p id="bio-text">Lydia Berger - Music Ministry Chair</p>
                             <p id="bio-text">Montgomery Flores - Men's Small Group Chair</p>
                             <p id="bio-text">Emily Brown - Women's Small Group Chair</p>
->>>>>>> af9872a4ff424a6d5dc22a7cc06cf578ff905e46
 						</header>
 						
 						<footer>
