--- a/public/about.html
+++ b/public/about.html
@@ -18,10 +18,10 @@
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
 			<ul class="navbar-nav mr-auto">
 			  <li class="nav-item active">
-				<a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
+				<a class="nav-link" href="file://index.html">Home</a>
 			  </li>
 			  <li class="nav-item">
-				<a class="nav-link" href="about.html">About us</a>
+				<a class="nav-link" href="about.html">About us<span class="sr-only">(current)</span></a>
 			  </li>
 			  </ul>
 		</nav>
