--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
 				<a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
 			  </li>
 			  <li class="nav-item">
-				<a class="nav-link" href="about.html">About us</a>
+				<a class="nav-link" href="file://about.html">About us</a>
 			  </li>
 			  </ul>
 		</nav>
