--- a/public/events.html
+++ b/public/events.html
@@ -21,10 +21,10 @@
 				<a class="nav-link" href="file://index.html">Home</a>
 			  </li>
 			  <li class="nav-item">
-				<a class="nav-link" href="about.html">About us<span class="sr-only">(current)</span></a>
+				<a class="nav-link" href="about.html">About us</a>
 			  </li>
 			  <li class="nav-item">
-				<a class="nav-link" href="events.html">Events</a>
+				<a class="nav-link" href="events.html">Events<span class="sr-only">(current)</span></a>
 			  </li>
 
 			  </ul>
