--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,10 @@
 			  <li class="nav-item">
 				<a class="nav-link" href="file://about.html">About us</a>
 			  </li>
-			  </ul>
+			  <li class="nav-item">
+				<a class="nav-link" href="file://about.html">About us</a>
+			  </li>
+            </ul>
 		</nav>
 
 	<body class="is-preload">
