--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
 				<a class="nav-link" href="file://about.html">About us</a>
 			  </li>
 			  <li class="nav-item">
-				<a class="nav-link" href="file://about.html">About us</a>
+				<a class="nav-link" href="file://events.html">Events</a>
 			  </li>
             </ul>
 		</nav>
