add email button

--- a/public/events.html
+++ b/public/events.html
@@ -57,6 +57,7 @@
 							<ul class="icons">
 								<li><a href="https://ncm-utd.slack.com" class="fa-slack">Slack</a></li>
 								<li><a href="https://instagram.com/ncm_utd" class="fa-instagram">Instagram</a></li>
+								<li><a href="mailto:newmandutd@gmail.com" class="far fa-envelope">Email</a></li>
 							</ul>
 						</footer>
 					</section>
