--- a/public/about.html
+++ b/public/about.html
@@ -57,7 +57,8 @@
 							<ul class="icons">
 								<li><a href="https://ncm-utd.slack.com" class="fa-slack">Slack</a></li>
 								<li><a href="https://instagram.com/ncm_utd" class="fa-instagram">Instagram</a></li>
-							</ul>
+								<li><a href="mailto:newmandutd@gmail.com" class="far fa-envelope">Email</a></li>
+                            </ul>
 						</footer>
 					</section>
 
