Fixed the navbar bolding on top

--- a/public/index.html
+++ b/public/index.html
@@ -13,13 +13,13 @@
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
 			<ul class="navbar-nav mr-auto">
 			  <li class="nav-item active">
-				<a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
+				<a class="nav-link">Home<span class="sr-only">(current)</span></a>
 			  </li>
 			  <li class="nav-item">
-				<a class="nav-link" href="file://about.html">About us</a>
+				<a class="nav-link" href="about.html">About us</a>
 			  </li>
 			  <li class="nav-item">
-				<a class="nav-link" href="file://events.html">Events</a>
+				<a class="nav-link" href="events.html">Events</a>
 			  </li>
             </ul>
 		</nav>
@@ -49,7 +49,7 @@
 					</section>
 				<!-- Footer -->
 					<footer id="footer">
-						Built by <a href="https://github.com/nich227/ncm-utd">the bois</a> in Newman Catholic Ministry
+						Built by <a href="https://github.com/nich227/ncm-utd">the web devs</a> in Newman Catholic Ministry
 					</footer>
 
 			</div>
