--- a/public/about.html
+++ b/public/about.html
@@ -12,11 +12,11 @@
 
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
 			<ul class="navbar-nav mr-auto">
-			  <li class="nav-item active">
-				<a class="nav-link" href="file://index.html">Home</a>
-			  </li>
 			  <li class="nav-item">
-				<a class="nav-link" href="about.html">About us<span class="sr-only">(current)</span></a>
+				<a class="nav-link" href="index.html">Home</a>
+			  </li>
+			  <li class="nav-item active">
+				<a class="nav-link">About us<span class="sr-only">(current)</span></a>
 			  </li>
 			  <li class="nav-item">
 				<a class="nav-link" href="events.html">Events</a>
@@ -64,7 +64,7 @@
 
 				<!-- Footer -->
 					<footer id="footer">
-						Built by <a href="https://github.com/nich227/ncm-utd">the bois</a> in Newman Catholic Ministry
+						Built by <a href="https://github.com/nich227/ncm-utd">the web devs</a> in Newman Catholic Ministry
 					</footer>
 
 			</div>
