--- a/public/index.html
+++ b/public/index.html
@@ -1,66 +1,38 @@
-<!DOCTYPE HTML>
-<html>
-	<head>
-		<title>Newman Catholic Ministry</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<link rel="stylesheet" href="assets/css/bootstrap.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-		<link rel='icon' href='favicon.ico' type='image/x-icon'/>
-	</head>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <!--
+      manifest.json provides metadata used when your web app is installed on a
+      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
+    -->
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <!--
+      Notice the use of %PUBLIC_URL% in the tags above.
+      It will be replaced with the URL of the `public` folder during the build.
+      Only files inside the `public` folder can be referenced from the HTML.
 
-	<nav class="navbar navbar-expand-lg navbar-light bg-light">
-			<ul class="navbar-nav mr-auto">
-			  <li class="nav-item active">
-				<a class="nav-link">Home<span class="sr-only">(current)</span></a>
-			  </li>
-			  <li class="nav-item">
-				<a class="nav-link" href="about.html">About us</a>
-			  </li>
-			  <li class="nav-item">
-				<a class="nav-link" href="events.html">Events</a>
-			  </li>
-            </ul>
-		</nav>
+      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
+      work correctly both with client-side routing and a non-root public URL.
+      Learn how to configure a non-root public URL by running `npm run build`.
+    -->
+    <title>React App</title>
+  </head>
+  <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
+    <!--
+      This HTML file is a template.
+      If you open it directly in the browser, you will see an empty page.
 
-	<body class="is-preload">
+      You can add webfonts, meta tags, or analytics to this file.
+      The build step will place the bundled scripts into the <body> tag.
 
-		<!-- Wrapper -->
-			<div id="wrapper">
-
-				<!-- Main -->
-					<section id="main">
-						<header>
-							<a href="http://soundbible.com/book/holy-bible-pdf-download.pdf"><span class="avatar"><img src="images/avatar.jpg" alt="" style="width:200px"/></span></a>
-							<h1>Newman Catholic Ministry</h1>
-							<p id="bio-text">As Catholics at the University of Texas at Dallas, we seek to build up the Catholic community, 
-								reach out to Catholics on campus and be the presence of Christ to those around us.</p>
-						</header>
-						
-						<footer>
-							<ul class="icons">
-								<li><a href="https://ncm-utd.slack.com" class="fa-slack">Slack</a></li>
-								<li><a href="https://instagram.com/ncm_utd" class="fa-instagram">Instagram</a></li>
-								<li><a href="mailto:newmandutd@gmail.com" class="far fa-envelope">Email</a></li>
-
-							</ul>
-						</footer>
-					</section>
-				<!-- Footer -->
-					<footer id="footer">
-						Built by <a href="https://github.com/nich227/ncm-utd">the web devs</a> in Newman Catholic Ministry
-					</footer>
-
-			</div>
-
-		<!-- Scripts -->
-			<script>
-				if ('addEventListener' in window) {
-					window.addEventListener('load', function() { document.body.className = document.body.className.replace(/\bis-preload\b/, ''); });
-					document.body.className += (navigator.userAgent.match(/(MSIE|rv:11\.0)/) ? ' is-ie' : '');
-				}
-			</script>
-
-	</body>
+      To begin the development, run `npm start` or `yarn start`.
+      To create a production bundle, use `npm run build` or `yarn build`.
+    -->
+  </body>
 </html>
