--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>Newman Catholic Ministry at UT Dallas</title>
   <base href="/">
-
+  <meta name="theme-color" content="#ffdd57">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
