--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <title>Newman Catholic Ministry at UT Dallas</title>
   <base href="/">
   <meta name="theme-color" content="#ffdd57">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
