--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>Newman Catholic Ministry at UT Dallas</title>
@@ -7,8 +8,16 @@
   <meta name="theme-color" content="#ffdd57">
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <style>
+    html {
+      scroll-behavior: smooth;
+    }
+
+  </style>
 </head>
+
 <body>
   <app-root></app-root>
 </body>
+
 </html>
